# SDL2-Template-Project

./: CMakeLists.txt  README.md  main.cpp
.cmake/api/v1/reply/: cache-v2-49c44d3ebe59e011116d.json  cmakeFiles-v1-1ba798869462e2a4d5ed.json  codemodel-v2-c5c71af1329277e90be4.json  index-2022-07-16T04-29-09-0912.json  target-SDL2TemplateProject-Debug-b5b6d1e35210251373af.json
cmake/: findSDL2.cmake
cmakeModules/: findSDL2.cmake
